modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ header {
 .eligibility {
   padding: 3rem 2rem;
   background: linear-gradient(rgba(249,255,236,0.8), rgba(249,255,236,0.8)),
-              url('https://source.unsplash.com/1600x900/?education,university');
+              url('https://www.nileuniversity.edu.ng/wp-content/uploads/2024/12/Nile-University-class-of-2024-graduating-students-1030x687.jpg');
   background-size: cover;
   background-position: center;
   color: var(--text-color);
